<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Running</string>
    <string name="aboutMessage">Migliora la tua corsa con Running</string>
    <string name="setting_unit">Veocità/Ritmo</string>
    <string name="time">Tempo</string>
    <string name="speed">Velocità</string>
    <string name="peace">Ritmo Attuale</string>
    <string name="averageSpeed">Velocità media</string>
    <string name="averagePeace">Ritmo medio</string>
    <string name="distance">Distanza</string>
    <string name="unit_kmh">Km/h</string>
    <string name="unit_km">Km</string>
    <string name="unit_minKm">min/Km</string>
    <string name="info">Ricerca in corso</string>
    <string name="enableGPSButtonLabel">Abilita GPS</string>
    <string name="startButtonLabel">Vai a fare una Corsa</string>
    <string name="stopButtonLabel">Termina</string>
    <string name="pauseButtonLabel">Sospendi</string>
    <string name="resumeButtonLabel">Riprendi</string>
    <string name="gpsReady">Segnale GPS Presente</string>
    <string name="aboutMenuName">Informazioni</string>
    <string name="average">Media</string>
    <string name="doneActivity">Fatto</string>
    <string name="calories">Calorie</string>

    <string name="metronomeCheckBoxLabel">Metronomo</string>
    <string name="metronome_continue">Continuo</string>
    <string name="metronome_intervals">Intervalli</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_summary">SummaryActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
