<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="running.org.running.StartActivity2">

    <item
        android:id="@+id/menu_settings"
        android:titleCondensed="@string/setting_unit"
        android:title="@string/setting_unit"
        android:icon="@android:drawable/ic_menu_preferences">
        <menu>
            <item android:id="@+id/unit_kmh" android:title="@string/unit_kmh" />
            <item android:id="@+id/unit_mk" android:title="@string/unit_minKm" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_about"
        android:titleCondensed="@string/aboutMenuName"
        android:title="@string/aboutMenuName"
        android:icon="@android:drawable/ic_menu_help">
    </item>
</menu>
