<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent" >

    <TextView  android:id="@+id/infoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:text="@string/info"/>

    <TextView  android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:text="" />

    <TextView  android:id="@+id/averageSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:text=""/>

    <TextView  android:id="@+id/distanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:text=""/>

    <TextView android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:text="" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/pauseButtonLabel" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:text="@string/stopButtonLabel" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/resumeButtonLabel" />

</RelativeLayout>