<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="running.org.running.SummaryActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:background="@drawable/border"></LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:background="#fff8f8f8"></FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/border">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.00"
                    android:id="@+id/distanceValue"
                    android:gravity="bottom|center_horizontal"
                    android:layout_weight="0.5"
                    android:textSize="22dp"
                    android:textColor="#ff000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Km"
                    android:id="@+id/distanceUnitValue"
                    android:gravity="top|center_horizontal"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="00:00:00"
                    android:id="@+id/timeValue"
                    android:textSize="22dp"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#ff000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/time"
                    android:id="@+id/timeLabel"
                    android:layout_weight="0.5"
                    android:gravity="top|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0:00"
                    android:id="@+id/averageSpeedValue"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#ff000000"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_minKm"
                    android:id="@+id/averageSpeedUnitValue"
                    android:layout_weight="0.5"
                    android:gravity="top|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/caloriesValue"
                    android:textColor="#ff000000"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/calories"
                    android:id="@+id/caloriesLabel"
                    android:layout_weight="0.5"
                    android:gravity="top|center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#ffffffff">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/doneActivity"
            android:id="@+id/saveActivityButton"
            android:onClick="doneSummary" />
    </FrameLayout>

</LinearLayout>
